Colaboratory를 통해 생성됨

--- a/R_practice_2.ipynb
+++ b/R_practice_2.ipynb
@@ -1381,9 +1381,9 @@
         "id": "X5Tgr73_ROJ9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 69
         },
-        "outputId": "8ee408bf-3ec3-4aab-bca4-95a183e73828"
+        "outputId": "467c0ff5-40a9-4232-ba6c-229b3e84c018"
       },
       "source": [
         "# 1. mean\n",
@@ -1413,25 +1413,69 @@
         "  output\n",
         "}\n",
         "\n",
-        "col_mean(df)"
+        "col_mean(df)\n",
+        "col_median(df)\n",
+        "col_sd(df)"
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "[1] -0.084639104 -0.002400303 -0.030917685 -0.083247511"
+              "[1]  0.008366184 -0.007193789 -0.525180657 -0.032081396"
             ],
-            "text/latex": "\\begin{enumerate*}\n\\item -0.0846391036597818\n\\item -0.00240030324052032\n\\item -0.0309176854543395\n\\item -0.0832475108396539\n\\end{enumerate*}\n",
-            "text/markdown": "1. -0.0846391036597818\n2. -0.00240030324052032\n3. -0.0309176854543395\n4. -0.0832475108396539\n\n\n",
+            "text/latex": "\\begin{enumerate*}\n\\item 0.0083661844712867\n\\item -0.00719378895261571\n\\item -0.525180656852419\n\\item -0.0320813957870611\n\\end{enumerate*}\n",
+            "text/markdown": "1. 0.0083661844712867\n2. -0.00719378895261571\n3. -0.525180656852419\n4. -0.0320813957870611\n\n\n",
             "text/html": [
               "<style>\n",
               ".list-inline {list-style: none; margin:0; padding: 0}\n",
               ".list-inline>li {display: inline-block}\n",
               ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
               "</style>\n",
-              "<ol class=list-inline><li>-0.0846391036597818</li><li>-0.00240030324052032</li><li>-0.0309176854543395</li><li>-0.0832475108396539</li></ol>\n"
+              "<ol class=list-inline><li>0.0083661844712867</li><li>-0.00719378895261571</li><li>-0.525180656852419</li><li>-0.0320813957870611</li></ol>\n"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1] -0.3073199  0.2065463 -0.3433268 -0.2937860"
+            ],
+            "text/latex": "\\begin{enumerate*}\n\\item -0.307319885033683\n\\item 0.206546283884534\n\\item -0.343326842750398\n\\item -0.293786040889686\n\\end{enumerate*}\n",
+            "text/markdown": "1. -0.307319885033683\n2. 0.206546283884534\n3. -0.343326842750398\n4. -0.293786040889686\n\n\n",
+            "text/html": [
+              "<style>\n",
+              ".list-inline {list-style: none; margin:0; padding: 0}\n",
+              ".list-inline>li {display: inline-block}\n",
+              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+              "</style>\n",
+              "<ol class=list-inline><li>-0.307319885033683</li><li>0.206546283884534</li><li>-0.343326842750398</li><li>-0.293786040889686</li></ol>\n"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1] 1.744003 1.079185 1.225565 1.159452"
+            ],
+            "text/latex": "\\begin{enumerate*}\n\\item 1.74400272145918\n\\item 1.07918543068891\n\\item 1.22556515298865\n\\item 1.15945226232028\n\\end{enumerate*}\n",
+            "text/markdown": "1. 1.74400272145918\n2. 1.07918543068891\n3. 1.22556515298865\n4. 1.15945226232028\n\n\n",
+            "text/html": [
+              "<style>\n",
+              ".list-inline {list-style: none; margin:0; padding: 0}\n",
+              ".list-inline>li {display: inline-block}\n",
+              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+              "</style>\n",
+              "<ol class=list-inline><li>1.74400272145918</li><li>1.07918543068891</li><li>1.22556515298865</li><li>1.15945226232028</li></ol>\n"
             ]
           },
           "metadata": {
